# SentinelAI

./: .env.example  .gitignore  SYSTEM_DESIGN.md  design.md  pyproject.toml  readme.md  render.yaml  structure.md
.github/workflows/: main.yml
app/: __init__.py  main.py  requirements.txt  resume.json  resume.py
app/api/: router.py
app/api/routes/: admin.py  alerts.py  health.py  logs.py  privacy.py  resume.py  webhook.py
app/core/: config.py  dependencies.py  logger.py  prompts.py
app/schemas/: admin.py  alert.py  health.py  log.py  resume.py  user.py
app/services/: admin.py  demo.py  event_store.py  health.py  llm.py  notifier.py  telegram_bot.py
app/services/admin/: __init__.py  formatter.py  interfaces.py  parser.py  registry.py  router.py
app/services/admin/handlers/: diagnostics.py  portfolio.py  system.py  toggles.py
tests/: test_app.py
