[project]
name = "sentinelai"
version = "0.1.0"
description = "Personal control plane for backend systems and AI portfolio workflows."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.27.0",
    "fastapi==0.136.0",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
    "uvicorn[standard]==0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
